[project]
name = "pycounts-524-J-Test"

[tool.poetry]
version = "0.1.0"
description = "Counting words in a text file"
authors = ["Jiayi Li"]
license = "MIT"
readme = "README.md"
packages = [{include = "pycounts_524_J_Test", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
jupyter = "^1.1.1"
myst-nb = {version = "^1.1.2", python = "^3.9"}
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
